--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a href="index.html" class="logo-header"><span>Web</span>Studio</a>
     <nav class="nav-header">
         <ul class="nav-links">
-            <li class="nav-link"><a class="current" href="index.html">Agencja</a></li>
+            <li class="nav-link"><a class="current" href="index.html">Agencja</a>
+                <div class="underscore-index"></div></li>
             <li class="nav-link"><a href="portfolio.html">Portfolio</a></li>
             <li class="nav-link"><a href="#kontakt">Kontakt</a></li>
         </ul>
@@ -87,15 +88,30 @@
         <div class="container">
         <h2 class="section_title">Czym się zajmujemy</h2>
         <ul class="photos_index_list">   
-        <li><img src="./images/img3.jpg" class="photo"
+        <li class="photo_index">
+            <img src="./images/img3.jpg" class="photo"
                 alt="man typing on keyboard"
-                width="370" height="294"></li>
-        <li><img src="./images/img2.jpg" class="photo"
+                width="370" height="294">
+                <div class="photo_index_overlay">
+                    <p class="photo_index_p">Aplikacje komputerowe</p>
+                </div>
+        </li>
+        <li class="photo_index">
+            <img src="./images/img2.jpg" class="photo"
                 alt="man working on his phone and laptop"
-                width="370" height="294"></li>
-        <li><img src="./images/img1.jpg" class="photo"
+                width="370" height="294">
+                <div class="photo_index_overlay">
+                    <p class="photo_index_p">Aplikacje mobilne</p>
+                </div>
+        </li>
+        <li class="photo_index">
+            <img src="./images/img1.jpg" class="photo"
                 alt="man holding a tablet"
-                width="370" height="294"></li>
+                width="370" height="294">
+                <div class="photo_index_overlay">
+                    <p class="photo_index_p">Rozwiązania graficzne</p>
+                </div>
+        </li>
         </ul>
         </div>
     </section>
