--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,8 @@
     <nav class="nav-header">
         <ul class="nav-links">
             <li class="nav-link"><a href="index.html">Agencja</a></li>
-            <li class="nav-link"><a class="current" href="portfolio.html">Portfolio</a></li>
+            <li class="nav-link"><a class="current" href="portfolio.html">Portfolio</a>
+                <div class="underscore-portfolio"></div></li>
             <li class="nav-link"><a href="#kontakt">Kontakt</a></li>
         </ul>
     </nav>
