--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 <li class="photo_grid">
                     <div class="overlay_box">
                       <img
-                        src="/goit-markup-hw-05/images/img_ui.jpg" alt="strona internetowa otwarta w przeglądarce na laptopie" width="370" height="294"/>
+                        src="/goit-markup-hw-05/images/img_ui.jpg" alt="desktop with some ui elements on it" width="370" height="294"/>
                       <div class="overlay">
                         <p class="overlay_p">
                           Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
